fixed gap

--- a/src/components/home/index.css
+++ b/src/components/home/index.css
@@ -16,7 +16,7 @@
     width: 550px;
 }
 .title{
-    margin-top: 100px;
+    margin-top: 20px;
 }
 .text-div{
     background-color: wheat;
